@@ -24,8 +24,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Set;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -299,7 +299,7 @@ public final class BiomeStep {
 		validateBiomeExecutable(resolvedPathToExe);
 		validateBiomeConfigPath(configPath, version);
 		logger.debug("Using Biome executable located at  '{}'", resolvedPathToExe);
-		var exeSignature = FileSignature.signAsList(Collections.singleton(new File(resolvedPathToExe)));
+		var exeSignature = FileSignature.signAsList(Set.of(new File(resolvedPathToExe)));
 		makeExecutable(resolvedPathToExe);
 		return new State(resolvedPathToExe, exeSignature, configPath, language);
 	}
